[10.11] [PR 957] added redirect permanent configuration
Backport of PR #957

--- a/modules/admin_manual/pages/installation/letsencrypt/apache.adoc
+++ b/modules/admin_manual/pages/installation/letsencrypt/apache.adoc
@@ -187,9 +187,9 @@ It is now ready to serve HTTPS request for the given domain using the issued cer
 sudo service apache2 reload
 ----
 
-== Add a redirect directive
+== Add a Redirect Directive
 
-Now that we have SSL configured and enabled, we need to configure that all traffic to our server is redirected to use the encrypted ssl site.
+Now that SSL has been configured and enabled, a redirection of all traffic to the encrypted ssl site needs to be added. Reload the Apache configuration to activate it.
 
 [source,apache]
 ----
