fix argument text

--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_file_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_file_commands.adoc
@@ -137,7 +137,7 @@ When a mount point gets removed, the storage ID and file cache related info stay
 
 [width="100%",cols="23%,70%",]
 |===
-| `storage-id` | Remove a storage from the storages table and related files from the filecache table.
+| `storage-id` | The numeric ID of the storage.
 |===
 
 === Options
