--- a/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_file_commands.adoc
+++ b/modules/admin_manual/pages/configuration/server/occ_commands/core_commands/_file_commands.adoc
@@ -157,6 +157,26 @@ This command should be handled with absolute care because *any* storage ID and t
 * To identify removal candidates, run this command with option `--show-candidates` first.
 ====
 
+=== Example Output
+
+[source,bash,subs="attributes+"]
+----
+{occ-command-example-prefix} files:remove-storage --show-candidates
+----
+
+[source,plaintext]
+----
++---------+-------------------------------------------------+------------+
+| storage | id                                              | file_count |
++---------+-------------------------------------------------+------------+
+| 3       | local::/mnt/project/files/                      | 3          |
+| 12      | wnd::MOUNTAIN\mountainUser1@10.0.2.203/foobar// | 9          |
+| 15      | NULL                                            | 8          |
++---------+-------------------------------------------------+------------+
+----
+
+Note that the ID can be NULL as shown at storage 15 if there is no info about it in the `oc_storages` table. It can also be hashed if it's too long (as it is in the DB).
+
 == The files:scan command
 
 The `files:scan` command
