[10.11] [PR 1020] Remove youtube community channel
Backport of PR #1020

--- a/modules/admin_manual/pages/index.adoc
+++ b/modules/admin_manual/pages/index.adoc
@@ -1,7 +1,6 @@
 = Introduction
 :owncloud-news-url: https://owncloud.com/news/
 :ownCloud-channel-url: https://www.youtube.com/channel/UC_4gez4lsWqciH-otOlXo5w
-:community-channel-url: https://www.youtube.com/channel/UCA8Ehsdu3KaxSz5KOcCgHbw
 
 Welcome to the ownCloud Classic Server Administration Guide. This guide describes administration tasks for ownCloud, the flexible open source file synchronization and sharing solution. ownCloud includes the ownCloud server, which runs on Linux, plus client applications for Microsoft Windows, Mac OS X, Linux, Android and Apple iOS operating systems.
 
@@ -16,7 +15,7 @@ ownCloud server is available in three editions:
 == ownCloud Videos and Blogs
 
 See the
-{ownCloud-channel-url}[official ownCloud channel] and {community-channel-url}[ownClouders community channel] on YouTube for tutorials, overviews, and conference videos. Visit {owncloud-news-url}[News] to stay up to date.
+{ownCloud-channel-url}[official ownCloud channel] on YouTube for tutorials, overviews, and conference videos. Visit {owncloud-news-url}[News] to stay up to date.
 
 == Target Audience
 
