[10.11] [PR 1037] Update impersonate_users.adoc
Backport of PR #1037

--- a/modules/admin_manual/pages/configuration/general_topics/impersonate_users.adoc
+++ b/modules/admin_manual/pages/configuration/general_topics/impersonate_users.adoc
@@ -12,6 +12,7 @@
 
 * This functionality is available to administrators only.
 * Impersonating is not possible when using Shibboleth or OpenID.
+* Impersonating is not possible when the specific user has never logged in before.
 
 == Impersonating a User
 
