--- a/modules/admin_manual/pages/configuration/general_topics/impersonate_users.adoc
+++ b/modules/admin_manual/pages/configuration/general_topics/impersonate_users.adoc
@@ -11,7 +11,7 @@
 == Limitations
 
 * This functionality is available to administrators only.
-* Impersonating is not possible when using Shibboleth or OpenID.
+* Impersonating is not possible when using Shibboleth.
 
 == Impersonating a User
 
